<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/bbc"
            android:title="@string/bbc"
            android:menuCategory="secondary"
            />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/aljazeera"
            android:title="@string/aljazeera"
            android:menuCategory="secondary"
            />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/cnn"
            android:title="@string/cnn"
            android:menuCategory="secondary"
            />

        <item
            android:id="@+id/foxNewsFragement"
            android:icon="@drawable/fox"
            android:title="@string/fox_news"
            android:menuCategory="secondary"
            />

        <item
            android:id="@+id/skyNewsFragement"
            android:icon="@drawable/sky"
            android:title="@string/sky_news"
            android:menuCategory="secondary"
            />


    </group>

    <item android:title="Upcoming"
        android:menuCategory="secondary"
        >

        <menu>
            <item
                android:id="@+id/nykfragement"
                android:icon="@drawable/nyk"
                android:title="New York Times"

                />
        </menu>
    </item>
</menu>