<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.futech.navigationdrawer.ui.bbc.HomeFragment"
        android:label="@string/bbc"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_skyNewsFragement"
            app:destination="@id/skyNewsFragement" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.futech.navigationdrawer.ui.gallery.GalleryFragment"
        android:label="@string/aljazeera"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.futech.navigationdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/cnn"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/foxNewsFragement"
        android:name="com.futech.navigationdrawer.fragement.foxNewsFragement"
        android:label="@string/foxNews"
        tools:layout="@layout/fragment_fox_news_fragement" />
    <fragment
        android:id="@+id/skyNewsFragement"
        android:name="com.futech.navigationdrawer.fragement.SkyNewsFragment"
        android:label="@string/skyNews"
        tools:layout="@layout/fragment_sky_news" />
</navigation>